--- a/BJ.Admin/Views/Product/UpdateLanguage.cshtml
+++ b/BJ.Admin/Views/Product/UpdateLanguage.cshtml
@@ -32,7 +32,7 @@
                 </button>
                 <button class="btn btn-info" onclick="location.href='/chi-tiet-san-pham/@ViewBag.Id/them-moi-ngon-ngu'" type="button">
                     <i class="anticon anticon-plus-circle"></i>
-                    <span>Thêm ngôn ngữ</span>
+                    <span>Cập nhật ngôn ngữ</span>
                 </button>
             </div>
 
