--- a/BJ.Admin/Views/Shared/_Layout.cshtml
+++ b/BJ.Admin/Views/Shared/_Layout.cshtml
@@ -87,6 +87,13 @@
                                 <span class="title">Sản phẩm</span>
 
                             </a>
+                            <a class="dropdown-toggle" href="/tat-ca-blog.html">
+                                <span class="icon-holder">
+                                    <i class="anticon anticon-book"></i>
+                                </span>
+                                <span class="title">Blog</span>
+
+                            </a>
                         </li>
                     </ul>
                 </div>
