--- a/BJ.Admin/Views/Size/Detail.cshtml
+++ b/BJ.Admin/Views/Size/Detail.cshtml
@@ -59,6 +59,10 @@
                                     <td>	@Model.Price</td>
                                 </tr>
                                 <tr>
+                                    <td>Ghi chú:</td>
+                                    <td>@Model.Note</td>
+                                </tr>
+                                <tr>
                                     <td>Hoạt động:</td>
                                     <td>
                                         @if (Model.Active == true)
