--- a/BJ.Admin/Views/Size/Index.cshtml
+++ b/BJ.Admin/Views/Size/Index.cshtml
@@ -35,6 +35,7 @@
                         <tr>
                             <th>Id</th>
                             <th>Size</th>
+                            <th>Mô tả</th>
                             <th>Giá tiền</th>
                             <th>Hoạt động</th>
                             <th></th>
@@ -48,6 +49,7 @@
                                 <tr>
                                     <td>@item.Id</td>
                                     <td>@item.Name</td>
+                                    <td>@item.Note</td>
                                     <th>@item.Price.Value.ToString("#,##0")&nbsp;₫</th>
                                     <td>
                                         <div class="d-flex align-items-center">
