--- a/BJ.App/wwwroot/BoostJuice/css/contact.css
+++ b/BJ.App/wwwroot/BoostJuice/css/contact.css
@@ -265,6 +265,12 @@ label, legend {
     width:30%;
     text-align:center;
 }
+.previous{
+    float:left;
+}
+.next2, .submit{
+    float:right;
+}
 .hideMe {
     display: none;
 }
