--- a/BJ.Admin/Views/Size/Edit.cshtml
+++ b/BJ.Admin/Views/Size/Edit.cshtml
@@ -44,9 +44,7 @@
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="tab" href="#product-edit-basic">Thông tin size</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#product-edit-description">Mô tả</a>
-            </li>
+           
         </ul>
     </div>
     <div class="tab-content m-t-15">
@@ -56,6 +54,10 @@
                     <div class="form-group">
                         <label class="font-weight-semibold" for="catName">Tên size</label>
                         <input type="text" class="form-control" id="catName" placeholder="Tên size" value="@Model.Name" asp-for="@Model.Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label class="font-weight-semibold" for="name">Ghi chú</label>
+                        <input type="text" class="form-control" id="note" placeholder="Ghi chú" value="@Model.Note" asp-for="@Model.Note" required>
                     </div>
                     @if (Model.Active == true)
                     {
@@ -79,7 +81,7 @@
                     }
                     <div class="form-group">
                         <label class="font-weight-semibold" for="catName">Giá tiền</label>
-                        <input type="text" class="form-control" id="catName" placeholder="Giá tiền" value="@Model.Price" asp-for="@Model.Price" required>
+                        <input type="number" min="0" class="form-control" id="catName" placeholder="Giá tiền" value="@Model.Price" asp-for="@Model.Price" required>
                     </div>
 
                 </div>
