--- a/BJ.App/Views/Home/Index.cshtml
+++ b/BJ.App/Views/Home/Index.cshtml
@@ -282,15 +282,15 @@
                     {
                         @foreach (var item in Model)
                         {
-                            <div class="row">
+                            <div class="row" itemscope itemtype="https://schema.org/Article">
                                 <div class="six columns">
-                                    <h2>@item.Title</h2>
-                                    <p></p>@Html.Raw(item.ShortDesc)
+                                    <h2 itemprop="name">@item.Title</h2>
+                                    <p itemprop="description"></p>@Html.Raw(item.ShortDesc)
                                     <p></p>
-                                    <p id="detailBtn"><a href="/@culture/@_loc["newsUrl"]/@item.Id/@item.Alias" class="button" style="margin-bottom:30px"><localize>Learn More</localize></a></p>
+                                    <p id="detailBtn" itemprop="url"><a href="/@culture/@_loc["promotionUrl"]/@item.Id/@item.Alias" class="button" style="margin-bottom:30px"><localize>Learn More</localize></a></p>
 
                                 </div>
-                                <div class="six columns half-angle"><img src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" alt="@item.Title" style="width:100%;height:100%"></div>
+                                <div class="six columns half-angle"><img itemprop="image" src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" alt="@item.Title" style="width:100%;height:100%"></div>
 
                             </div>
                         }
