--- a/BJ.App/Views/News/Detail.cshtml
+++ b/BJ.App/Views/News/Detail.cshtml
@@ -17,15 +17,15 @@
         <div class="row">
             <div id="blog-posts" class="eight columns">
 
-                <div class="row" style="display: block;">
-                    <h2>@Model.Title</h2>
+                <div class="row" style="display: block;" itemscope itemtype="https://schema.org/Article">
+                    <h2 itemprop="name">@Model.Title</h2>
                     @if (Model.DateCreated != null)
                     {
-                        <div class="date">@Model.DateCreated.Value.ToString("dd MMMM yyyy",CultureInfo.CreateSpecificCulture("en-US"))</div>
+                        <div itemprop="dateCreated" class="date">@Model.DateCreated.Value.ToString("dd MMMM yyyy",CultureInfo.CreateSpecificCulture("en-US"))</div>
 
                     }
-                    <img src="@Configuration["BaseAddress"]/ImageNews/@Model.ImagePath" title="@Model.Title" alt="@Model.Title" class="blog-cover">
-                    <p>
+                    <img itemprop="image" src="@Configuration["BaseAddress"]/ImageNews/@Model.ImagePath" title="@Model.Title" alt="@Model.Title" class="blog-cover">
+                    <p itemprop="description">
                         @Html.Raw(Model.Description)
                     </p>
                 </div>
