--- a/BJ.App/Views/News/Index.cshtml
+++ b/BJ.App/Views/News/Index.cshtml
@@ -17,25 +17,26 @@
     <div class="main-fold-angle banner-news"></div>
     <div class="container">
         <div class="row">
-            <div id="blog-posts" class="eight columns">
+            <div id="blog-posts" class="eight columns" itemscope itemtype="https://schema.org/ItemList">
                 @if (Model != null && Model.Count() > 0)
                 {
                     @foreach (var item in Model)
                     {
-                        <div class="row" style="display: block;">
-                            <h2>@item.Title</h2>
+                        <div class="row" style="display: block;" itemscope itemtype="https://schema.org/Article">
+                            <h2 itemprop="name" >@item.Title</h2>
                             @if (item.DateCreated != null)
                             {
 
-                                <div class="date">@item.DateCreated.Value.ToString("dd MMMM yyyy",CultureInfo.CreateSpecificCulture("en-US"))</div>
+                                <div itemprop="dateCreated" class="date">@item.DateCreated.Value.ToString("dd MMMM yyyy",CultureInfo.CreateSpecificCulture("en-US"))</div>
 
                             }
-                            <a href="/@culture/@_loc["newsUrl"]/@item.Id/@item.Alias">
-                                <img src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" title="@item.Title" alt="@item.Title" class="blog-cover">
+                            <a itemprop="url" href="/@culture/@_loc["newsUrl"]/@item.Id/@item.Alias">
+                                <img itemprop="image" src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" title="@item.Title" alt="@item.Title" class="blog-cover">
                             </a>
-                            <p>
+                            <p itemprop="description">
                                 @Html.Raw(item.ShortDesc)
-                            </p><a href="/@culture/@_loc["newsUrl"]/@item.Id/@item.Alias"><localize>Read more</localize></a>
+                            </p>
+                            <a itemprop="url" href="/@culture/@_loc["newsUrl"]/@item.Id/@item.Alias"><localize>Read more</localize></a>
                         </div>
                     }
                 }
