--- a/BJ.App/Views/News/_PopularNews.cshtml
+++ b/BJ.App/Views/News/_PopularNews.cshtml
@@ -15,10 +15,10 @@
     {
         <div class="row">
             <div class="four columns">
-                <a href="/@ViewBag.Culture/@ViewBag.NewsUrl/@item.Id/@item.Alias"><img src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" title="@item.Title" class="blog-cover"></a>
+                <a i href="/@ViewBag.Culture/@ViewBag.NewsUrl/@item.Id/@item.Alias"><img src="@Configuration["BaseAddress"]/ImageNews/@item.ImagePath" title="@item.Title" class="blog-cover"></a>
             </div>
             <div class="eight columns">
-                <h3><a href="/@ViewBag.Culture/@ViewBag.NewsUrl/@item.Id/@item.Alias">@item.Title</a></h3>
+                <h3><a  href="/@ViewBag.Culture/@ViewBag.NewsUrl/@item.Id/@item.Alias">@item.Title</a></h3>
                 @if (item.DateCreated != null)
                 {
                     <p>@item.DateCreated.Value.ToString("dd MMMM yyyy",CultureInfo.CreateSpecificCulture("en-US"))</p>
